--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,5 +1,9 @@
 doctrine:
     dbal:
+
+        types:
+            uuid: Ramsey\Uuid\Doctrine\UuidType
+
         url: '%env(resolve:DATABASE_URL)%'
 
         # IMPORTANT: You MUST configure your server version,
