--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/orm": "^2.12",
         "guzzlehttp/guzzle": "^7.0",
         "knplabs/doctrine-behaviors": "^2.6",
+        "nesbot/carbon": "^2.59",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.6",
         "ramsey/uuid": "^4.3",
