--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,6 @@
 .env
 .env.local
 .env.test
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
