--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -11,18 +11,19 @@ security:
                 class: App\Entity\User
                 property: email
     firewalls:
-        login:
-            pattern: ^/api/login
+        api:
+            pattern: ^/api/
             stateless: true
+            provider: app_user_provider
+            entry_point: jwt
             json_login:
-                check_path: /api/login_check
+                check_path: /api/login
+                username_path: email
+                password_path: password
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
-
-        api:
-            pattern: ^/api
-            stateless: true
             jwt: ~
+
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
@@ -39,9 +40,10 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
 
-    # access_control:
-     #   - { path: ^/api/login, roles: ROLE_ADMIN }
-     #   - { path: ^/api,       roles: ROLE_ADMIN }
+    access_control:
+        - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/docs, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/, roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
     security:
