--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,8 @@ MONGO_INITDB_ROOT_USERNAME=root
 MONGO_INITDB_ROOT_PASSWORD=trT9555JGEymFmcG
 ###< DOCKER ENV ###
 MESSENGER_TRANSPORT_DSN=amqp://localhost/%2f/messages?auto_setup=false
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=a3fee0e0eb8ac704f958d29c1bd74cdf
+###< lexik/jwt-authentication-bundle ###
