--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -4,7 +4,7 @@ vich_uploader:
 
     mappings:
         image:
-            uri_prefix: /var/images
+            uri_prefix: /public/images
             upload_destination: '%kernel.project_dir%/var/images'
             namer: Vich\UploaderBundle\Naming\OrignameNamer
             directory_namer:
