--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-    import_images_file: '%kernel.project_dir%/files/import'
+    import_images_file: '%kernel.project_dir%/public/images'
 
 services:
 
