--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -6,10 +6,6 @@ vich_uploader:
         image:
             uri_prefix: /public/images
             upload_destination: '%kernel.project_dir%/public/images'
-            namer: Vich\UploaderBundle\Naming\OrignameNamer
             directory_namer:
-                service: Vich\UploaderBundle\Naming\CurrentDateTimeDirectoryNamer
-                options:
-                    date_time_format: 'Y/m/d'
-                    date_time_property: uploadedAt
-
+                service: Vich\UploaderBundle\Naming\SubdirDirectoryNamer
+                options: { chars_per_dir: 1, dirs: 2 }
