Add login and admin

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.12",
+        "easycorp/easyadmin-bundle": "^4",
         "guzzlehttp/guzzle": "^7.0",
         "imagine/imagine": "^1.3",
         "knplabs/doctrine-behaviors": "^2.6",
