--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -4,8 +4,11 @@ vich_uploader:
 
     mappings:
         image:
-            uri_prefix: /public/images
+            uri_prefix: /images
             upload_destination: '%kernel.project_dir%/public/images'
+            namer:
+                service: Vich\UploaderBundle\Naming\HashNamer
+                options: { algorithm: 'sha256', length: 20 }
             directory_namer:
                 service: Vich\UploaderBundle\Naming\SubdirDirectoryNamer
                 options: { chars_per_dir: 1, dirs: 2 }
