--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     import_images_file: '%kernel.project_dir%/public/images'
+    images_url: '/public/images'
 
 services:
 
