--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,6 +22,10 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
+
+    App\Service\Parsers\SweetTvService: ~
+    App\Service\Parsers\MegogoService: ~
+
     App\OpenApi\JwtDecorator:
         decorates: 'api_platform.openapi.factory'
         autoconfigure: false
