--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -34,10 +34,10 @@ add_audio:
     _api_item_operation_name: add_audio
     _api_receive: false
     _controller: App\Controller\AudioController::addAudio
-#api_popular:
-#  path: /api/people/actors/popular
-#  methods: ['GET']
-#  defaults:
-#    _api_resource_class: App\Entity\People
-#    _api_collection_operation_name: popular_actors
-#    _controller: '\App\Controller\PopularActorController::getPopularActors'
+api_popular:
+  path: /api/people/actors/popular
+  methods: ['GET']
+  defaults:
+    _api_resource_class: App\Entity\People
+    _api_collection_operation_name: popular_actors
+    _controller: '\App\Controller\PopularActorController::getPopularActors'
