--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,12 @@
         "nesbot/carbon": "^2.59",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.6",
+        "predis/predis": "^2.0",
         "ramsey/uuid": "^4.3",
         "ramsey/uuid-doctrine": "^1.8",
         "sensio/framework-extra-bundle": "^6.1",
         "symfony/asset": "5.4.*",
+        "symfony/cache": "5.4.*",
         "symfony/console": "5.4.*",
         "symfony/doctrine-messenger": "5.4.*",
         "symfony/dom-crawler": "5.4.*",
