--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "guzzlehttp/guzzle": "^7.0",
         "imagine/imagine": "^1.3",
         "knplabs/doctrine-behaviors": "^2.6",
+        "knplabs/knp-paginator-bundle": "^5.9",
         "lexik/jwt-authentication-bundle": "^2.16",
         "nelmio/cors-bundle": "^2.2",
         "nesbot/carbon": "^2.59",
