--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "easycorp/easyadmin-bundle": "^4",
         "guzzlehttp/guzzle": "^7.0",
         "imagine/imagine": "^1.3",
+        "javer/sphinx-bundle": "^1.4",
         "knplabs/doctrine-behaviors": "^2.6",
         "knplabs/knp-paginator-bundle": "^5.9",
         "lexik/jwt-authentication-bundle": "^2.16",
