--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@
 # Parameters
 /app/config/parameters.yml
 /app/config/parameters.ini
-
+/data
 # Managed by Composer
 /app/bootstrap.php.cache
 /var/bootstrap.php.cache
