--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,27 +57,25 @@ services:
       - 6379:6379
 
   sphinx:
-    image: duzun/sphinx:2.2
-    build: sphinx
-    container_name: sphinx
+    container_name: manticore
+    image: manticoresearch/manticore
     restart: always
-    # env_file: .env
-    # depends_on:
-    #     - mariadb
-    # external_links:
-    #     - mariadb:db
     ports:
-      - "9312:9312"
-      - "9306:9306"
+      - 127.0.0.1:9306:9306
+      - 127.0.0.1:9308:9308
+    ulimits:
+      nproc: 65535
+      nofile:
+        soft: 65535
+        hard: 65535
+      memlock:
+        soft: -1
+        hard: -1
+    environment:
+      - MCL=1
     volumes:
-      # expose sphinx daemon to system through socket
-      - /run/sphinx/:/run/sphinx/
-      # make MySQL accessible to sphinx through socket
-      - /run/mysqld/:/run/mysqld/
-      # expose logs to host system
-      - /var/log/sphinxsearch:/var/lib/sphinx/log
-      # choose a location for index data
-      # - /var/lib/sphinx/data:/var/lib/sphinx/data
+      - ./data:/var/lib/manticore
+      - ./docker/sphinx/manticore.conf:/etc/manticoresearch/manticore.conf # uncommment if you use a custom config
 
 volumes:
   mysql-data:
