add search sphinx

--- a/docker/sphinx/manticore.conf
+++ b/docker/sphinx/manticore.conf
@@ -25,7 +25,7 @@ index plain_films
 {
     source = src_films
     path = /var/lib/manticore/plain_films
-    morphology = stem_enru
+    morphology = lemmatize_ru_all, stem_enru, lemmatize_en_all
     min_stemming_len = 4
     expand_keywords = 1
     index_exact_words=1
@@ -39,9 +39,11 @@ index plain_films
 source src_films: src_common
 {
     sql_query_pre = set names utf8
-    sql_query = SELECT fbp.id, fbp.provider_id, fbpt.title, fbpt.description FROM film_by_provider as fbp INNER JOIN film_by_provider_translation as fbpt ON (fbp.id = fbpt.translatable_id)
+    sql_query = SELECT fbp.id, fbp.provider_id, concat_ws(' ', fbpt.title, fbp.year) as title, fbpt.description FROM film_by_provider as fbp INNER JOIN film_by_provider_translation as fbpt ON (fbp.id = fbpt.translatable_id)
     sql_attr_uint = id
     sql_attr_uint = provider_id
-    sql_attr_string = title
-    sql_attr_string = description
+    sql_field_string = year
+    sql_field_string = title
+    sql_field_string = description
+
 }
