--- a/config/packages/javer_sphinx.yaml
+++ b/config/packages/javer_sphinx.yaml
@@ -1,6 +1,6 @@
 javer_sphinx:
-  host: 127.0.0.1
+  host: sphinx
   port: 9306
-  config_path: "%kernel.project_dir%/config/sphinx.conf"
-  data_dir: "%kernel.cache_dir%/sphinx"
-  searchd_path: searchd
+  config_path: "%kernel.project_dir%/docker/sphinx/manticore.conf"
+  data_dir: "%kernel.project_dir%/data"
+  #searchd_path: searchd
