--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,6 +22,11 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
+            - '../src/Tests/'
+
+    App\Controller\:
+        resource: '../src/Controller/'
+        tags: ['controller.service_arguments']
 
     App\Service\Parsers\SweetTvService: ~
     App\Service\Parsers\MegogoService: ~
