--- a/composer.json
+++ b/composer.json
@@ -63,6 +63,7 @@
         "vich/uploader-bundle": "^1.19"
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^7.1",
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "hautelook/alice-bundle": "^2.11",
         "phpunit/phpunit": "^9.5",
