--- a/config/services_test.yaml
+++ b/config/services_test.yaml
@@ -4,5 +4,7 @@ services:
   _defaults:
     public: true
 
-  App\Service\Parsers\Megogo\FilmFieldService:
+  App\Service\Parsers\Megogo\FilmFieldTranslateService:
     public: true
+    arguments:
+      [ '@validator' ]
