--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "nesbot/carbon": "^2.59",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.6",
+        "phpunit/php-code-coverage": "^9.2",
         "predis/predis": "^2.0",
         "ramsey/uuid": "^4.3",
         "ramsey/uuid-doctrine": "^1.8",
